# Flash-Audit

./: .gitignore  Cargo.toml  LICENSE  README.md  rules.yaml
.github/workflows/: audit.yml
src/: main.rs  scanner.rs
src/utils/: config.rs  entropy.rs  file_loader.rs  mod.rs  sarif.rs
